--- a/src/main/resources/templates/aluno/editarAluno.html
+++ b/src/main/resources/templates/aluno/editarAluno.html
@@ -4,9 +4,9 @@
 
 <head>
 
-<title>Cadastrar Profissional</title>
+<title>Editar Aluno</title>
 
-<meta charset="UTF-8"/>
+<meta charset="UTF-8"/> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 <!-- Bootstrap core CSS -->
@@ -19,30 +19,29 @@
 
 <body>
 
-
-
-	<form action="#" th:action="@{/profissional/cadastrarProfissional}" th:object="${profissional}" th:method="post">
+	<!-- EDITAR ALUNO -->
+	<form th:if="${aluno.id} != null" th:action="@{/aluno/editarAluno}" th:object="${aluno}" th:method="put">
 	 
 	 <div class="container">
-		 <div class="well">
-		 
-		 	<h2>Cadastro de Profissional</h2>
-		 
-		 </div>
 	 
 	 <div class="row">
 
+		<div class="col-4" th:if="${aluno.id} != null">
+			<label>Id:</label>
+			<input type="text" th:field="*{id}" th:readonly="${readonly}"/>
+		</div>
+
 	 	<div class="col-4">
 			<label>Nome:</label>
-			<input type="text" th:field="${profissional.nome}" />
+			<input type="text" th:field="*{nome}" />
+		</div>
+		<div class="col-4">
+			<label>Sexo:</label>
+			<input type="text" th:field="*{sexo}"/>
 		</div>
 		<div class="col-4">
 			<label>CPF:</label>
-			<input type="text" th:field="${profissional.cpf}"/>
-		</div>
-		<div class="col-4">
-			<label>Email:</label>
-			<input type="text" th:field="${profissional.email}"/>
+			<input type="text" th:field="*{cpf}"/>
 		</div>
 		
 	</div>
@@ -51,13 +50,18 @@
 	
 	<div class="row">
 	
+		<div class="col-4" th:if="${aluno.idTel} != null">
+			<label>Id:</label>
+			<input type="text" th:field="*{idTel}"/>
+		</div>
+	
 		<div class="col-4">
 			<label>DDD:</label>
-			<input type="text" th:field="${profissional.ddd}"/>
+			<input type="text" th:field="*{ddd}"/>
 		</div>
 		<div class="col-4">
 			<label>Telefone:</label>
-			<input type="text" th:field="${profissional.numeroTel}"/>
+			<input type="text" th:field="*{numeroTel}"/>
 		</div>
 	
 	</div>
@@ -67,36 +71,41 @@
 	<div class="row">
 	
 		<label>Endereço</label>
+		
+		<div class="col-4" th:if="${aluno.idEnd} != null">
+			<label>Id:</label>
+			<input type="text" th:field="*{idEnd}"/>
+		</div>
+		
 		<div class="col-4">
 			<label>Logradouro:</label>
-			<input type="text" th:field="${profissional.logradouro}"/>
+			<input type="text" th:field="*{logradouro}"/>
 		</div>
 		<div class="col-4">
 			<label>Número:</label>
-			<input type="text" th:field="${profissional.numeroEnd}"/>
+			<input type="text" th:field="*{numeroEnd}"/>
 		</div>
 		<div class="col-4">
 			<label>Complemento:</label>
-			<input type="text" th:field="${profissional.complemento}"/>			
+			<input type="text" th:field="*{complemento}"/>			
 		</div>
 		<div class="col-4">
 			<label>Bairro:</label>
-			<input type="text" th:field="${profissional.bairro}"/>
+			<input type="text" th:field="*{bairro}"/>
 		</div>
 		<div class="col-4">
 			<label>Cep:</label>
-			<input type="text" th:field="${profissional.cep}"/>
+			<input type="text" th:field="*{cep}"/>
 		</div>
 	
 	</div>
 	
 	<br/>
 	
-	<button type="submit">Cadastrar</button>
+	<button type="submit">Editar</button>
 	 
 	 </div>
-	 
-	</form>
+	 </form>
 
 
 
