Estilizando a pagina Cadastrar Cliente, Profissional e Serviço

--- a/src/main/resources/templates/servico/cadastrarServico.html
+++ b/src/main/resources/templates/servico/cadastrarServico.html
@@ -4,68 +4,132 @@
 
 <head>
 
-<title>Cadastrar Serviço</title>
+<title>Cadastrar Servico</title>
 
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta charset="UTF-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 <!-- Font Icons -->
-    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}"/>
- 
+<link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />
+<link rel="stylesheet" th:href="@{/css/estilo.css}" />
 
 </head>
 
 <body>
+	<header>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+
+				<div class="navbar-header">
+
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+						aria-expanded="false">
+						<span class="sr-only"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#" th:href="@{/home}">Bruna</a>
+				</div>
+				<div id="collapse-navbar bs-example-navbar-collapse-1"
+					class="collapse navbar-collapse">
+					<ul class="nav nav-pills nav-justified">
+						<li><a href="product/list.html"
+							th:href="@{/aluno/cadastrarAluno}">Cadastrar Aluno</a></li>
+
+						<li><a href="order/list.html" th:href="@{/aluno/listarAluno}">Listar
+								Aluno</a></li>
+
+						<li><a href="subscribe.html"
+							th:href="@{/profissional/cadastrarProfissional}">Cadastrar
+								Profissional</a></li>
+
+						<li><a href="userprofile.html"
+							th:href="@{/profissional/listarProfissional}">Listar
+								Profissionais</a></li>
+
+						<li><a href="userprofile.html"
+							th:href="@{/servico/cadastrarServico}">Cadastrar Servicos</a></li>
+
+						<li><a href="userprofile.html"
+							th:href="@{/servico/listarServico}">Listar Servicos</a></li>
+
+						<li><a href="userprofile.html"
+							th:href="@{/agendamento/cadastrarAgendamento}">Cadastrar
+								Agendamento</a></li>
 
 
+						<li><a href="userprofile.html"
+							th:href="@{/agendamento/listarAgendamento}">Listar
+								Agendamentos</a>
+						<li>
+					</ul>
+				</div>
+			</div>
 
-	<form action="#" th:action="@{/servico/cadastrarServico}" th:object="${servico}" th:method="post">
-	 
-		 <div class="container">
-			 <div class="well">
-			 
-			 	<h2>Cadastro de Serviço</h2>
-			 
-			 </div>
-		 
-		 <div class="row">
-		 	<div class="col-4">
-				<label>Nome do serviço:</label>
-				<input type="text" th:field="${servico.nome}" />
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-4">
-				<label>Descrição do serviço:</label>
-				<textarea th:field="${servico.descricao}" />
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-4">
-				<select th:field="${servico.idProf}">
-    				<option value="">Selecione o profissional</option>
-   					<option th:each="lista : ${listaProf}" 
-   							th:value="${lista.id}" 
-   							th:text="${lista.nome}">
-   					</option>
-    			</select>
-			</div>
-		</div>
+		</nav>
+		<div class="conteudo-header "></div>
+	</header>
+	<section id="conteudo">
+		<div class="container">
+			<fieldset>
+				<legend>Dados Servico</legend>
+
+				<form action="#" class="form-inline" th:action="@{/servico/cadastrarServico}" th:object="${servico}" th:method="post">
 		
-		<br/>
-		
-		<button type="submit">Cadastrar</button>
-		 
-		 </div>
-	 
-	</form>
+						<div class="row">
+							<div class="col-md-2"></div>
+							
+							<div class="form-group col-md-4">
+								<label>Nome do serviço:</label> <input type="text"
+									class="form-control" th:field="*{nome}" required/>
+							</div>
+							
+							<div class="form-group col-md-4">
+								<label>Profissional:</label>
+								<select  class="form-control" th:field="*{idProf}" required>
+									<option value="" disabled>Selecione o profissional</option>
+									<option th:each="lista : ${listaProf}" th:value="${lista.id}"
+										th:text="${lista.nome}"></option>
+								</select>
+							</div>
+							
+							<div class="col-md-2"></div>				
+							
+						</div>
+						
+						<div class="row">
+							<div class="col-md-2"></div>
+							
+							<div class="form-group col-md-4">
+								<label>Descrição do serviço:</label>
+								<textarea class="form-control" th:field="*{descricao}" style="width: 680px; height: 200px"/>
+							</div>
+							<div class="col-md-4"></div>
+						</div>
+							
+						
+						<div class="row">
+							<div class="col-md-8"></div>
+							<div class="col-md-2">
+								<button type="submit" class="btn btn-success">Cadastrar</button>
+							</div>
+						</div>
 
+					
 
+				</form>
+			</fieldset>
 
+		</div>
 
+	</section>
+	<footer> Desenvolvido pelo Grupo 6 - Delta UP! </footer>
 
-</body>
-
+	<script src="/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
+	<script src="/js/navbra-animation-fix.js"
+		th:href="@{/js/navbra-animation-fix.js}"></script>
+	<script src="/jquery/jquery.js" th:href="@{/jquery/jquery.js}"></script>
 </html>
