Estilizando a pagina Editar Cliente, Profissional e Serviço

--- a/src/main/resources/templates/profissional/listarProfissional.html
+++ b/src/main/resources/templates/profissional/listarProfissional.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>Lista Alunos</title>
+<title>Lista de Profissionais</title>
 
 <meta charset="UTF-8" />
 <meta name="viewport"
@@ -78,7 +78,7 @@
 
 			<div class="well">
 
-				<h1>Lista de Aluno</h1>
+				<h1>Lista de Professor</h1>
 
 				<div class="row">
 
