--- a/src/main/resources/templates/profissional/editarProfissional.html
+++ b/src/main/resources/templates/profissional/editarProfissional.html
@@ -4,113 +4,185 @@
 
 <head>
 
-<title>Editar Aluno</title>
+<title>Cadastrar Aluno</title>
 
-<meta charset="UTF-8"/> 
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta charset="UTF-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 <!-- Font Icons -->
-    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}"/>
- 
+<link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />
+<link rel="stylesheet" th:href="@{/css/estilo.css}" />
 
 </head>
 
 <body>
+	<header>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
 
-	<!-- EDITAR ALUNO -->
-	<form th:if="${profissional.id} != null" th:action="@{/profissional/editarProfissional}" th:object="${profissional}" th:method="put">
-	 
-	 <div class="container">
-	 
-	 <div class="row">
+				<div class="navbar-header">
 
-		<div class="col-4" th:if="${profissional.id} != null">
-			<label>Id:</label>
-			<input type="text" th:field="*{id}" th:readonly="${readonly}"/>
-		</div>
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+						aria-expanded="false">
+						<span class="sr-only"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#" th:href="@{/home}">Bruna</a>
+				</div>
+				<div id="collapse-navbar bs-example-navbar-collapse-1"
+					class="collapse navbar-collapse">
+					<ul class="nav nav-pills nav-justified">
+						<li><a href="product/list.html"
+							th:href="@{/aluno/cadastrarAluno}">Cadastrar Aluno</a></li>
 
-	 	<div class="col-4">
-			<label>Nome:</label>
-			<input type="text" th:field="*{nome}" />
-		</div>
-		<div class="col-4">
-			<label>CPF:</label>
-			<input type="text" th:field="*{cpf}"/>
-		</div>
-		<div class="col-4">
-			<label>E-mail:</label>
-			<input type="text" th:field="*{email}"/>
+						<li><a href="order/list.html" th:href="@{/aluno/listarAluno}">Listar
+								Aluno</a></li>
+
+						<li><a href="subscribe.html"
+							th:href="@{/profissional/cadastrarProfissional}">Cadastrar
+								Profissional</a></li>
+
+						<li><a href="userprofile.html"
+							th:href="@{/profissional/listarProfissional}">Listar
+								Profissionais</a></li>
+
+						<li><a href="userprofile.html"
+							th:href="@{/servico/cadastrarServico}">Cadastrar Servicos</a></li>
+
+						<li><a href="userprofile.html"
+							th:href="@{/servico/listarServico}">Listar Servicos</a></li>
+
+						<li><a href="userprofile.html"
+							th:href="@{/agendamento/cadastrarAgendamento}">Cadastrar
+								Agendamento</a></li>
+
+
+						<li><a href="userprofile.html"
+							th:href="@{/agendamento/listarAgendamento}">Listar
+								Agendamentos</a>
+						<li>
+					</ul>
+				</div>
+			</div>
+
+		</nav>
+		<div class="conteudo-header "></div>
+	</header>
+	<section id="conteudo">
+		<div class="container">
+		<fieldset>
+			<legend>Dados Aluno</legend>
+			<form th:if="${profissional.id} != null" class="form-inline" th:action="@{/profissional/editarProfissional}"	th:object="${profissional}" th:method="PUT" >
+				<div class="row">
+				
+				<fieldset >
+				<legend>Aluno</legend>
+				
+					<div class="form-group col-md-6" th:if="${profissional.id} != null">
+						<label for="exampleInputName2">Id</label> 
+						<input type="text" th:field="*{id}" class="form-control"
+							id="exampleInputName2" autocomplete="name" required placeholder="Jane Doe">
+					</div>
+					<div class="form-group col-md-6">
+						<label for="exampleInputName2">Name*</label> 
+						<input type="text" th:field="*{nome}" class="form-control"
+							id="exampleInputName2" autocomplete="name" required placeholder="Jane Doe">
+					</div>
+					<div class="form-group col-md-6">
+						<label for="cpf">CPF*</label> 
+						<input type="text" th:field="*{cpf}" class="form-control" id="cpf"
+							placeholder="999999999" required >
+					</div>
+					<div class="form-group col-md-6">
+						<label for="email">E-mail*</label> <input type="text"
+							th:field="*{email}" class="form-control" id="email"
+							placeholder="bruna@gmail.com" required >
+					</div>
+					
+					
+				</fieldset>
+				</div>
+			
+				<fieldset >
+				<legend>Telefone</legend>
+				<div class="row">
+				<div class="form-group col-md-6" th:if="${profissional.idTel} != null">
+					<label for="exampleInputName2">Id</label> 
+					<input type="text" th:field="*{idTel}" class="form-control"
+						id="exampleInputName2" autocomplete="name" required placeholder="Jane Doe">
+				</div>
+				<div class="form-group col-md-6">
+					<label for="ddd">DDD</label> <input type="text"
+						th:field="*{ddd}" class="form-control" id="ddd"
+						placeholder="Ex. 43" autocomplete='tel-area-code'>
+				</div>
+				<div class="form-group col-md-6">
+					<label for="telefone">Telefone*</label> <input type="tel"
+						th:field="*{numeroTel}" class="form-control" id="telefone"
+						placeholder="Ex. 989899898" autocomplete='tel' required>
+				</div>
+				</div>
+				</fieldset>
+			
+				<fieldset >
+				<legend>Endereco</legend>
+				<div class="row">
+				<div class="form-group col-md-6" th:if="${profissional.idEnd} != null">
+					<label for="exampleInputName2">Id</label> 
+					<input type="text" th:field="*{idEnd}" class="form-control"
+						id="exampleInputName2" autocomplete="name" required placeholder="Jane Doe">
+				</div>
+				<div class="form-group col-md-4">
+					<label for="logradouro">Logradouro*</label> <input type="text"
+						th:field="*{logradouro}" class="form-control" id="logradouro"
+						placeholder="Rua Exemplo" autocomplete='street-address' required>
+				</div>
+				<div class="form-group col-md-4">
+					<label for="numero">Numero*</label> <input type="number"
+						th:field="*{numeroEnd}" class="form-control" id="numero"
+						placeholder="Ex. 123"required>
+				</div>
+				<div class="form-group col-md-4">
+					<label for="complemento">Complemento</label> <input type="text"
+						th:field="*{complemento}" class="form-control" id="complemento"
+						placeholder="apto 1234">
+				</div>
+				<div class="form-group col-md-4">
+					<label for="bairro">Bairro*</label> <input type="text"
+						th:field="*{bairro}" class="form-control" id="bairro"
+						placeholder="Jd. Exemplo"required>
+				</div>
+				<div class="form-group col-md-4">
+					<label for="cep">CEP*</label> <input type="text"
+						th:field="*{cep}" class="form-control" id="cep"
+						placeholder="86090000" autocomplete='postal-code' required>
+				</div>
+				<div class="row">
+					<div class="col-md-10"></div>
+					<div class="col-md-2">
+						<button type="submit" class="btn btn-success">Editar</button>
+					</div>
+				</div>
+			</div>
+			</fieldset>
+			</form>
+		</fieldset>
+		
 		</div>
 		
-	</div>
-	
-	<br/>
-	
-	<div class="row">
-	
-		<div class="col-4" th:if="${profissional.idTel} != null">
-			<label>Id:</label>
-			<input type="text" th:field="*{idTel}"/>
-		</div>
-	
-		<div class="col-4">
-			<label>DDD:</label>
-			<input type="text" th:field="*{ddd}"/>
-		</div>
-		<div class="col-4">
-			<label>Telefone:</label>
-			<input type="text" th:field="*{numeroTel}"/>
-		</div>
-	
-	</div>
-	
-	<br/>
-	
-	<div class="row">
-	
-		<label>Endereço</label>
 		
-		<div class="col-4" th:if="${profissional.idEnd} != null">
-			<label>Id:</label>
-			<input type="text" th:field="*{idEnd}"/>
-		</div>
-		
-		<div class="col-4">
-			<label>Logradouro:</label>
-			<input type="text" th:field="*{logradouro}"/>
-		</div>
-		<div class="col-4">
-			<label>Número:</label>
-			<input type="text" th:field="*{numeroEnd}"/>
-		</div>
-		<div class="col-4">
-			<label>Complemento:</label>
-			<input type="text" th:field="*{complemento}"/>			
-		</div>
-		<div class="col-4">
-			<label>Bairro:</label>
-			<input type="text" th:field="*{bairro}"/>
-		</div>
-		<div class="col-4">
-			<label>Cep:</label>
-			<input type="text" th:field="*{cep}"/>
-		</div>
 	
-	</div>
-	
-	<br/>
-	
-	<button type="submit">Editar</button>
-	 
-	 </div>
-	 </form>
 
+	</section>
+	<footer> Desenvolvido pelo Grupo 6 - Delta UP! </footer>
 
-
-
-
-</body>
+	<script src="/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
+	<script src="/js/navbra-animation-fix.js"
+		th:href="@{/js/navbra-animation-fix.js}"></script>
+	<script src="/jquery/jquery.js" th:href="@{/jquery/jquery.js}"></script>
 
 </html>
