--- a/src/main/resources/templates/aluno/cadastrarAluno.html
+++ b/src/main/resources/templates/aluno/cadastrarAluno.html
@@ -74,94 +74,134 @@
 	</header>
 	<section id="conteudo">
 		<div class="container">
-		<fieldset>
-			<legend>Dados Aluno</legend>
-			<form class="form-inline" th:action="@{/aluno/cadastrarAluno}"
-				th:object="${aluno}" method="post" th:method="POST" >
-				<div class="row">
-				
-				<fieldset >
-				<legend>Aluno</legend>
-					<div class="form-group col-md-6">
-						<label for="exampleInputName2">Name*</label> <input type="text"
-							th:field="*{nome}" class="form-control"
-							id="exampleInputName2" autocomplete="name" required placeholder="Jane Doe">
+			<fieldset>
+				<legend>Dados Aluno</legend>
+				<form class="form-inline" th:action="@{/aluno/cadastrarAluno}"
+					th:object="${aluno}" method="post" th:method="POST">
+
+					<div class="row">
+						<div class="col-lg-2"></div>
+						<div class="col-lg-5">
+							<div class="form-group">
+								<label for="exampleInputName2">Nome*</label> <input type="text"
+									th:field="*{nome}" class="form-control" id="exampleInputName2"
+									autocomplete="name" required placeholder="Jane Doe" size="50">
+							</div>
+						</div>
+						<div class="col-lg-5">
+							<div class="form-group">
+								<label for="cpf">CPF*</label> <input type="text"
+									th:field="*{cpf}" class="form-control" id="cpf"
+									placeholder="999999999" required>
+							</div>
+						</div>
 					</div>
-					<div class="form-group col-md-6">
-						<label for="cpf">CPF*</label> <input type="text"
-							th:field="*{cpf}" class="form-control" id="cpf"
-							placeholder="999999999" required >
+
+					<div class="row">
+						<div class="col-lg-2"></div>
+						<div class="col-lg-5">
+							<div class="form-group">
+								<label for="exampleInputName2">E-mail*</label> <input
+									type="text" class="form-control" id="exampleInputName2"
+									autocomplete="name" required placeholder="xxx@xxx.com.br"
+									size="50">
+							</div>
+						</div>
+						<div class="col-lg-5">
+							<div class="form-group">
+								<label for="exampleInputName2">Gênero*</label> <input
+									type="text" th:field="*{sexo}" class="form-control"
+									id="exampleInputName2" autocomplete="name" required
+									placeholder="Gênero" size="17">
+							</div>
+						</div>
 					</div>
-					<div class="form-group col-md-6">
-						<label for="sexo">Gênero*</label> <input type="text"
-							th:field="*{sexo}" class="form-control" id="sexo"
-							placeholder="Masculino" required >
+
+					<fieldset>
+						<legend>Telefone</legend>
+						<div class="row">
+							<div class="col-lg-2"></div>
+							<div class="col-lg-5">
+								<div class="form-group">
+									<label for="exampleInputName2">Telefone*</label> <input
+										type="text" th:field="*{ddd}" class="form-control"
+										id="exampleInputName2" autocomplete="name" required
+										placeholder="ddd" size="1"> <input type="text"
+										th:field="*{numeroTel}" class="form-control"
+										id="exampleInputName2" autocomplete="name" required
+										placeholder="Número do telefone" size="20">
+								</div>
+							</div>
+						</div>
+					</fieldset>
+
+					<fieldset>
+						<legend>Endereco</legend>
+						<div class="row">
+							<div class="col-lg-2"></div>
+							<div class="col-lg-3">
+								<div class="form-group">
+									<label for="cep">CEP*</label> <input type="text"
+										th:field="*{cep}" class="form-control" id="cep"
+										placeholder="86090000" required size="5">
+									<button class="btn btn-info"
+										onclick="pesquisacep(document.getElementById('cep').value);">Buscar</button>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-2"></div>
+							<div class="col-lg-5">
+								<div class="form-group">
+									<label for="logradouro">Logradouro*</label> <input type="text"
+										th:field="*{logradouro}" class="form-control" id="logradouro"
+										placeholder="Rua Exemplo" autocomplete='street-address'
+										required size="44">
+								</div>
+							</div>
+							<div class="col-lg-5">
+								<div class="form-group">
+									<label for="numero">Número*</label> <input type="text"
+										th:field="*{numeroEnd}" class="form-control" id="numero"
+										placeholder="123" required>
+								</div>
+							</div>
+
+						</div>
+
+						<div class="row">
+							<div class="col-lg-2"></div>
+							<div class="col-lg-5">
+								<div class="form-group">
+									<label for="complemento">Complemento</label> <input type="text"
+										th:field="*{complemento}" class="form-control"
+										id="complemento" placeholder="Apto 305" required size="43">
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="form-group">
+									<label for="bairro">Bairro*</label> <input type="text"
+										th:field="*{bairro}" class="form-control" id="bairro"
+										placeholder="Jd. Exemplo" required size="22">
+								</div>
+							</div>
+						</div>
+
+
+					</fieldset>
+					<div class="row">
+						<div class="col-md-10"></div>
+						<div class="col-md-2">
+							<button type="submit" class="btn btn-success">Cadastrar</button>
+						</div>
 					</div>
-					
-					
-				</fieldset>
-				</div>
-			
-				<fieldset >
-				<legend>Telefone</legend>
-				<div class="row">
-				<div class="form-group col-md-6">
-					<label for="ddd">DDD</label> <input type="text"
-						th:field="*{ddd}" class="form-control" id="ddd"
-						placeholder="Ex. 43" autocomplete='tel-area-code'>
-				</div>
-				<div class="form-group col-md-6">
-					<label for="telefone">Telefone*</label> <input type="tel"
-						th:field="*{numeroTel}" class="form-control" id="telefone"
-						placeholder="Ex. 989899898" autocomplete='tel' required>
-				</div>
-				</div>
-				</fieldset>
-			
-				<fieldset >
-				<legend>Endereco</legend>
-				<div class="row">
-				
-				<div class="form-group col-md-4">
-					<label for="logradouro">Logradouro*</label> <input type="text"
-						th:field="*{logradouro}" class="form-control" id="logradouro"
-						placeholder="Rua Exemplo" autocomplete='street-address' required>
-				</div>
-				<div class="form-group col-md-4">
-					<label for="numero">Numero*</label> <input type="number"
-						th:field="*{numeroEnd}" class="form-control" id="numero"
-						placeholder="Ex. 123"required>
-				</div>
-				<div class="form-group col-md-4">
-					<label for="complemento">Complemento</label> <input type="text"
-						th:field="*{complemento}" class="form-control" id="complemento"
-						placeholder="apto 1234">
-				</div>
-				<div class="form-group col-md-4">
-					<label for="bairro">Bairro*</label> <input type="text"
-						th:field="*{bairro}" class="form-control" id="bairro"
-						placeholder="Jd. Exemplo"required>
-				</div>
-				<div class="form-group col-md-4">
-					<label for="cep">CEP*</label> <input type="text"
-						th:field="*{cep}" class="form-control" id="cep"
-						placeholder="86090000" autocomplete='postal-code' required>
-				</div>
-				<div class="row">
-					<div class="col-md-10"></div>
-					<div class="col-md-2">
-						<button type="submit" class="btn btn-success">Cadastrar</button>
-					</div>
-				</div>
-			</div>
+				</form>
 			</fieldset>
-			</form>
-		</fieldset>
-		
+
 		</div>
-		
-		
-	
+
+
+
 
 	</section>
 	<footer> Desenvolvido pelo Grupo 6 - Delta UP! </footer>
@@ -170,5 +210,5 @@
 	<script src="/js/navbra-animation-fix.js"
 		th:href="@{/js/navbra-animation-fix.js}"></script>
 	<script src="/jquery/jquery.js" th:href="@{/jquery/jquery.js}"></script>
-
+	<script src="/js/pesquisa_cep.js" th:href="@{/js/pesquisa_cep.js}"></script>
 </html>
