--- a/src/main/resources/templates/profissional/cadastrarProfissional.html
+++ b/src/main/resources/templates/profissional/cadastrarProfissional.html
@@ -136,8 +136,8 @@
 									<label for="cep">CEP*</label> <input type="text"
 										th:field="*{cep}" class="form-control" id="cep"
 										placeholder="86090000" required size="5">
-									<button class="btn btn-info"
-										onclick="pesquisacep(document.getElementById('cep').value);">Buscar</button>
+									<a class="btn btn-info"
+										onclick="pesquisacep(document.getElementById('cep').value);">Buscar</a>
 								</div>
 							</div>
 						</div>
