--- a/src/main/resources/templates/aluno/cadastrarAluno.html
+++ b/src/main/resources/templates/aluno/cadastrarAluno.html
@@ -102,17 +102,22 @@
 						<div class="col-lg-5">
 							<div class="form-group">
 								<label for="exampleInputName2">E-mail*</label> <input
-									type="text" class="form-control" id="exampleInputName2"
+									type="text" th:field="*{email}" class="form-control" id="exampleInputName2"
 									autocomplete="name" required placeholder="xxx@xxx.com.br"
 									size="50">
 							</div>
 						</div>
 						<div class="col-lg-5">
 							<div class="form-group">
-								<label for="exampleInputName2">Gênero*</label> <input
-									type="text" th:field="*{sexo}" class="form-control"
+								<label for="exampleInputName2">Gênero*</label> 
+								<input type="text" th:field="*{sexo}" class="form-control"
 									id="exampleInputName2" autocomplete="name" required
 									placeholder="Gênero" size="17">
+								<!-- <select class="form-control">
+									<option>Selecione o gênero</option>
+									<option th:value="M" th:text="Masculino"></option>
+									<option th:value="F" th:text="Feminino"></option>
+								</select> -->	
 							</div>
 						</div>
 					</div>
@@ -144,8 +149,8 @@
 									<label for="cep">CEP*</label> <input type="text"
 										th:field="*{cep}" class="form-control" id="cep"
 										placeholder="86090000" required size="5">
-									<button class="btn btn-info"
-										onclick="pesquisacep(document.getElementById('cep').value);">Buscar</button>
+									<a class="btn btn-info"
+										onclick="pesquisacep(document.getElementById('cep').value);">Buscar</a>
 								</div>
 							</div>
 						</div>
