--- a/src/main/resources/templates/aluno/listarAluno.html
+++ b/src/main/resources/templates/aluno/listarAluno.html
@@ -88,6 +88,7 @@
 								<tr>
 									<th>ID</th>
 									<th>Nome</th>
+									<th>E-mail</th>
 									<th>CPF</th>
 									<th>Numero</th>
 									<th>Ações</th>
@@ -99,6 +100,7 @@
 
 									<td th:text="${cliente.id}"></td>
 									<td th:text="${cliente.nome}"></td>
+									<td th:text="${cliente.email}"></td>
 									<td th:text="${cliente.cpf}"></td>
 									<td th:text="${cliente.telefone.numero}"></td>
 
