--- a/src/main/resources/templates/profissional/editarProfissional.html
+++ b/src/main/resources/templates/profissional/editarProfissional.html
@@ -217,7 +217,7 @@
 					<div class="row">
 						<div class="col-md-10"></div>
 						<div class="col-md-2">
-							<button type="submit" class="btn btn-success">Cadastrar</button>
+							<button type="submit" class="btn btn-success">Editar</button>
 						</div>
 					</div>
 				</form>
